--- a/search_items/templates/search_items/search_items_list.html
+++ b/search_items/templates/search_items/search_items_list.html
@@ -8,7 +8,7 @@
 {% load custom_filters %}
 
 <!-- Main content section -->
-<div class="sm:px-6 lg:px-8 text-2xl dark:text-white flex items-center gap-1 justify-center my-[14px]">
+<div class="sm:px-6 lg:px-8 text-2xl text-white flex items-center gap-1 justify-center my-[14px]">
   <h2 class="background-color rounded-md h2_title">
     RESULTADOS PARA "{{ query }}"
   </h2>
