--- a/team_trophy/templates/team_trophy/trophy_list.html
+++ b/team_trophy/templates/team_trophy/trophy_list.html
@@ -8,7 +8,7 @@
 {% block list_content %}
 {% load custom_filters %}
 
-<div class="block sm:px-6 lg:px-8 text-2xl dark:text-white flex items-center gap-1 justify-center my-[14px]">
+<div class="block sm:px-6 lg:px-8 text-2xl text-white flex items-center gap-1 justify-center my-[14px]">
   {% include 'icons/trophy.html' %}
   <h2 class="background-color rounded-md">
     Taças
@@ -44,7 +44,7 @@
               </th>
             </tr>
           </thead>
-          <tbody class="text-gray-900 dark:text-[#A1A1AA]">
+          <tbody class="text-gray-900 text-[#A1A1AA]">
             {% for trophy in page_obj %} 
             <tr class="table_tr">
                 <td class="table_td">
