--- a/countries/templates/countries/country_detail.html
+++ b/countries/templates/countries/country_detail.html
@@ -21,13 +21,13 @@
 <div class="highlights mb-6 mt-9 flex justify-start gap-10 lg:gap-8 sm:px-6 lg:px-8 flex-col lg:flex-row">
   <div class="flex w-full lg:w-1/2 gap-4 lg:gap-6">
     <div class='w-full lg:w-1/2'>
-      <p class="text-xs text-left font-sm block w-auto dark:text-[#A1A1AA] absolute transform translate-y-[-100%]">PRINCIPAL LIGA</p>
+      <p class="text-xs text-left font-sm block w-auto text-[#A1A1AA] absolute transform translate-y-[-100%]">PRINCIPAL LIGA</p>
 
   
         {% if top_league %}
           <div class="card h-full flex justify-center flex-col items-center py-5 px-4">
             <img class="h-16 lg:h-24 mb-3" src="/media/images/leagues/{{top_league.slug}}{{top_league.id}}.webp" alt="{{top_league.name}}"/>
-            <a href="{% url 'country_league_detail' country_pk=country.pk pk=top_league.pk %}" class="dark:text-white mb-1 text-base lg:text-xl font-medium text-gray-900 min-h-[50px] lg:min-h-[60px] text-center">{{top_league.name}}</a>
+            <a href="{% url 'country_league_detail' country_pk=country.pk pk=top_league.pk %}" class="text-white mb-1 text-base lg:text-xl font-medium text-gray-900 min-h-[50px] lg:min-h-[60px] text-center">{{top_league.name}}</a>
             {% if "-" in top_league.balance %}
                 <span class="text-base lg:text-lg text-red-700 font-bold">{{ top_league.balance|passToFloat }}</span>       
             {% else %}
@@ -36,29 +36,29 @@
           </div>
         {% else %}
           <div class="card h-full ">
-            <p class="text-xs text-center font-sm block w-auto p-1 dark:text-[#A1A1AA]">SEM DADOS</p>
+            <p class="text-xs text-center font-sm block w-auto p-1 text-[#A1A1AA]">SEM DADOS</p>
           </div>        
         {% endif %}
     </div>
   
     <div class='w-full lg:w-1/2'>
-      <p class="text-xs text-left font-sm block w-auto dark:text-[#A1A1AA] absolute transform translate-y-[-100%]">TIME MAIS VALIOSO</p>
+      <p class="text-xs text-left font-sm block w-auto text-[#A1A1AA] absolute transform translate-y-[-100%]">TIME MAIS VALIOSO</p>
         {% if top_team %}
         <div class="card h-full flex justify-center flex-col items-center py-5 px-4">
             <img class="h-16 lg:h-24 mb-3" src="/media/images/teams/{{top_team.slug}}{{top_team.id}}.webp" alt="{{top_team.name}}"/>
-            <a href="{% url 'country_team_detail' country_pk=country.pk pk=top_team.pk %}" class="mb-1 text-base lg:text-xl dark:text-white min-h-[50px] lg:min-h-[60px] text-center"> {{top_team.name}}</a>
+            <a href="{% url 'country_team_detail' country_pk=country.pk pk=top_team.pk %}" class="mb-1 text-base lg:text-xl text-white min-h-[50px] lg:min-h-[60px] text-center"> {{top_team.name}}</a>
             <span class="text-base lg:text-lg text-green-700 font-bold">{{top_team.total_market_value|passToFloat }}</span>
         </div>
         {% else %}
         <div class="card h-full ">
-          <p class="text-xs text-center font-sm block w-auto p-1 dark:text-[#A1A1AA]">SEM DADOS</p>
+          <p class="text-xs text-center font-sm block w-auto p-1 text-[#A1A1AA]">SEM DADOS</p>
         </div>
         {% endif %}
     </div>
   </div>
 
   <div class="relative w-full lg:w-[60%]">
-    <p class="text-xs text-center block w-auto dark:text-[#A1A1AA] absolute transform translate-y-[-100%] ">TOP 3 JOGADORES QUE JOGAM NO PAÍS</p>
+    <p class="text-xs text-center block w-auto text-[#A1A1AA] absolute transform translate-y-[-100%] ">TOP 3 JOGADORES QUE JOGAM NO PAÍS</p>
 
     <!-- Table for displaying league data -->
     <div class="table_wrapper rounded-md">
@@ -101,7 +101,7 @@
             </tr>
           </thead>
 
-          <tbody class="text-gray-900 dark:text-[#A1A1AA]">
+          <tbody class="text-gray-900 text-[#A1A1AA]">
             {% if top_players %}
             {% for player in top_players %}
             <tr class="table_tr">
@@ -132,7 +132,7 @@
             {% else %}
             <tr class="table_tr">
               <td>
-                <p class="text-xs text-center font-sm block w-auto p-1 dark:text-[#A1A1AA]">SEM DADOS</p>
+                <p class="text-xs text-center font-sm block w-auto p-1 text-[#A1A1AA]">SEM DADOS</p>
               </td>
             </tr>
             {% endif %}
@@ -150,7 +150,7 @@
 <div class="sm:mx-0.5">
   <div class="w-full py-2 inline-block min-w-ful sm:px-6 lg:px-8">
 
-    <div class="table_tabs flex justify-evenly gap-1 relative z-20 bottom-[-1px] w-[250px] rounded-t-md text-xs dark:text-[#A1A1AA] cursor-pointer pl-2 pr-3 py-1  bg-white dark:bg-zinc-900">
+    <div class="table_tabs flex justify-evenly gap-1 relative z-20 bottom-[-1px] w-[250px] rounded-t-md text-xs text-[#A1A1AA] cursor-pointer pl-2 pr-3 py-1  bg-white bg-zinc-900">
       <div table="leagues" class="leagues_tab tab w-1/3 text-center {% if request.GET.tab == 'leagues' or not request.GET.tab %} font-bold {% endif %}">LIGAS</div>
       <span class="inline-block mx-2">|</span>
       <div table="teams" class="teams_tab tab w-1/3 text-center {% if request.GET.tab == 'teams' %} font-bold {% endif %}">EQUIPES</div>
@@ -197,12 +197,12 @@
             
             </tr>
           </thead>
-          <tbody class="dark:text-[#A1A1AA]">
+          <tbody class="text-[#A1A1AA]">
             {% if leagues %}
               <!-- Loop through league objects -->
               {% for league in leagues %}
               <!-- Alternating row colors -->
-              <tr class="table_tr dark:bg-zinc-900 left-0 z-10 pl-3">
+              <tr class="table_tr bg-zinc-900 left-0 z-10 pl-3">
                 <!-- League data -->
                 <td class="table_td">
                   <img width="40" src="{{ league.small_img }}" class="min-w-[40px]" />
@@ -276,7 +276,7 @@
               </th>
             </tr>
           </thead>
-          <tbody class="text-gray-900 dark:text-[#A1A1AA]">
+          <tbody class="text-gray-900 text-[#A1A1AA]">
             <!-- Teams list -->
             {% if teams %}
             {% for team in teams %}
@@ -374,7 +374,7 @@
             </tr>
           </thead>
   
-          <tbody class="dark:text-[#A1A1AA] text-gray-900">
+          <tbody class="text-[#A1A1AA] text-gray-900">
             {% if players %}
               {% for player in players %}
               <tr class="table_tr">
