--- a/leagues/templates/leagues/league_detail.html
+++ b/leagues/templates/leagues/league_detail.html
@@ -24,17 +24,17 @@
 
 <div class="grid grid-cols-1 grid-rows-3 md:grid-cols-2 md:grid-rows-2 lg:grid-cols-3 lg:grid-rows-1 gap-2 my-6 mx-auto min-w-full sm:px-6 lg:px-8">
     <div class="detail_card">
-      <span class="text-xs md:text-sm dark:text-[#A1A1AA]">
+      <span class="text-xs md:text-sm text-[#A1A1AA]">
         PAÍS:
       </span>
-      <a href={% url "country_detail" pk=related_country.pk %} class="flex items-center gap-1 text-xs md:text-sm font-medium dark:text-white">
+      <a href={% url "country_detail" pk=related_country.pk %} class="flex items-center gap-1 text-xs md:text-sm font-medium text-white">
         <img width="26" height="16" src="/media/images/countries/{{ related_country.slug }}{{ related_country.id }}.webp" class="inline-block h-[16px]" />
         {{ related_country.name | upper }} 
       </a>  
     </div>
 
     <div class="detail_card">
-      <span class="text-xs md:text-sm dark:text-[#A1A1AA]">
+      <span class="text-xs md:text-sm text-[#A1A1AA]">
       SALDO: 
       </span>
       {% if "-" in league.balance %}
@@ -46,7 +46,7 @@
     </div>
 
     <div class="detail_card">
-      <span class="text-xs md:text-sm dark:text-[#A1A1AA]">
+      <span class="text-xs md:text-sm text-[#A1A1AA]">
         Nº DE EQUIPES: 
       </span>
       <span class="text-green-700 font-bold text-sm"> {{ related_teams_count }} </span>
