--- a/team_trophy/templates/team_trophy/trophy_detail.html
+++ b/team_trophy/templates/team_trophy/trophy_detail.html
@@ -16,25 +16,25 @@
 <div class="flex justify-center">
   <div class="card ">
   <img width="80" src="{{ trophy.img }}" class="m-auto block" />
-  <h2 class="text-center dark:text-white text-md font-medium">{{ trophy.name | upper }}</h2>
+  <h2 class="text-center text-white text-md font-medium">{{ trophy.name | upper }}</h2>
   </div>
 </div>
 
 
 <div class="grid grid-cols-1 grid-rows-2 md:grid-cols-2 md:grid-rows-1 lg:grid-cols-2 lg:grid-rows-1 gap-2 my-6 mx-auto min-w-full sm:px-6 lg:px-8">
     <div class="detail_card">
-      <span class="text-xs md:text-sm dark:text-[#A1A1AA]">
+      <span class="text-xs md:text-sm text-[#A1A1AA]">
         Edições:
       </span>
-      <span class="text-xs md:text-sm font-medium dark:text-white">
+      <span class="text-xs md:text-sm font-medium text-white">
         {{ editions_count }}
       </span>
     </div>
     <div class="detail_card">
-      <span class="text-xs md:text-sm dark:text-[#A1A1AA]">
+      <span class="text-xs md:text-sm text-[#A1A1AA]">
         Maior campeão:
       </span>
-      <a href={% url "team_detail" pk=greatest_champion.pk %} class="flex items-center gap-1 text-xs md:text-sm font-medium dark:text-white">
+      <a href={% url "team_detail" pk=greatest_champion.pk %} class="flex items-center gap-1 text-xs md:text-sm font-medium text-white">
         <img width="16" src="/media/images/teams/{{ greatest_champion.slug }}{{ greatest_champion.id }}.webp" class="team_main_img inline-block" />
         {{ greatest_champion.name | upper }} 
       </a> 
