--- a/teams/templates/teams/paginator_players.html
+++ b/teams/templates/teams/paginator_players.html
@@ -3,7 +3,7 @@
 {% if paginator_players.num_pages > 1 %}
   <div tab="players"
     class="pagination pagination_players mt-4 sm:px-6 lg:px-8 {% if request.GET.tab == 'players' or not request.GET.tab %} {% else %} hidden {% endif %}">
-    <span class="text-gray-700 dark:text-white flex gap-1 pb-5 items-center step-links">
+    <span class="text-gray-700 text-white flex gap-1 pb-5 items-center step-links">
       {% if related_items.has_previous %}
         <a href="{{ url|set_pagination_params }}page=1" class="pagination_a">
           <i class="fa fa-caret-left" aria-hidden="true"></i>
