--- a/teams/templates/teams/team_detail.html
+++ b/teams/templates/teams/team_detail.html
@@ -21,24 +21,24 @@
 
 <div class="grid grid-cols-1 grid-rows-4 md:grid-cols-2 md:grid-rows-2 lg:grid-cols-4 lg:grid-rows-1 gap-2 my-6 mx-auto min-w-full sm:px-6 lg:px-8">
   <div class="detail_card">
-    <span class="text-xs md:text-sm dark:text-[#A1A1AA]">
+    <span class="text-xs md:text-sm text-[#A1A1AA]">
       PAÍSES:
     </span>
-    <a href={% url "country_detail" pk=related_country.pk %} class="flex items-center gap-1 text-xs md:text-sm font-medium dark:text-white">
+    <a href={% url "country_detail" pk=related_country.pk %} class="flex items-center gap-1 text-xs md:text-sm font-medium text-white">
       <img width="26" height="16" src="/media/images/countries/{{ related_country.slug }}{{ related_country.id }}.webp" class="inline-block h-[16px]" />
       {{ related_country.name | upper }} 
     </a>  
   </div>
 
   <div class="detail_card">
-    <span class="text-xs md:text-sm dark:text-[#A1A1AA]">
+    <span class="text-xs md:text-sm text-[#A1A1AA]">
       VALOR DO ELENCO:
     </span>
     <span class="text-green-700 font-bold text-sm">  {{ team_players_value | passToFloat}}  </span>
   </div>
 
   <div class="detail_card">
-    <span class="text-xs md:text-sm dark:text-[#A1A1AA]">
+    <span class="text-xs md:text-sm text-[#A1A1AA]">
       VALOR DE MERCADO: 
     </span>
     <span class="text-green-700 font-bold text-sm"> {{ team.total_market_value | passToFloat }} </span>
@@ -46,7 +46,7 @@
 
 
   <div class="detail_card">
-    <span class="text-xs md:text-sm dark:text-[#A1A1AA]">
+    <span class="text-xs md:text-sm text-[#A1A1AA]">
       ESTÁDIO: 
     </span>
     {% if stadium.pk %}
@@ -64,7 +64,7 @@
 <div class="sm:mx-0.5">
   <div class="max-w-[97vw] py-2 inline-block min-w-full sm:px-6 lg:px-8">
 
-    <div class="table_tabs flex justify-evenly gap-1 relative z-20 bottom-[-1px] w-[250px] rounded-t-md text-xs dark:text-[#A1A1AA] cursor-pointer pl-2 pr-3 py-1  bg-white dark:bg-zinc-900">
+    <div class="table_tabs flex justify-evenly gap-1 relative z-20 bottom-[-1px] w-[250px] rounded-t-md text-xs text-[#A1A1AA] cursor-pointer pl-2 pr-3 py-1  bg-white bg-zinc-900">
       <div table="players" class="players_tab tab text-center {% if request.GET.tab == 'players' or not request.GET.tab %} font-bold {% endif %}">JOGADORES</div>
       <span class="inline-block mx-2">|</span>
       <div table="trophies" class="trophies_tab tab text-center {% if request.GET.tab == 'trophies' %} font-bold {% endif %}">TROFÉUS</div>
@@ -233,7 +233,7 @@
             {% else %}
               <tr class="table_tr">
                 <td>
-                  <p class="text-xs text-center font-sm block w-auto p-1 dark:text-[#A1A1AA]">SEM DADOS</p>
+                  <p class="text-xs text-center font-sm block w-auto p-1 text-[#A1A1AA]">SEM DADOS</p>
                 </td>
               </tr>
             {% endif %}
