--- a/templates/atomic/organisms/aside.html
+++ b/templates/atomic/organisms/aside.html
@@ -1,14 +1,14 @@
 <!-- skeleton_loading.html -->
-<aside class="border-l-solid border-l-[10px] dark:bg-zinc-900  dark:border-l-zinc-900  h-full fixed  z-20 overflow-x-hidden transition-primary shadow-[0px_1px_5px_1px_#00000024]">
+<aside class="border-l-solid border-l-[10px] bg-zinc-900  border-l-zinc-900  h-full fixed  z-20 overflow-x-hidden transition-primary shadow-[0px_1px_5px_1px_#00000024]">
     <ul class="absolute z-2 top-[50px]">
         <!-- Skeleton loading list items -->
             <li class="h-[56px] flex items-center">
                 <a href="/">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center dark:text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
                             {% include 'icons/home.html' %}
                         </div>
-                        <span class='dark:text-[#A1A1AA]'>
+                        <span class='text-[#A1A1AA]'>
                             Home
                         </span>
                     </div>
@@ -17,10 +17,10 @@
             <li class="h-[56px] flex items-center">
                 <a href="{% url 'league_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center dark:text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
                             {% include 'icons/league.html' %}
                         </div>
-                        <span class='dark:text-[#A1A1AA]'>
+                        <span class='text-[#A1A1AA]'>
                             Ligas
                         </span>
                     </div>
@@ -29,10 +29,10 @@
             <li class="h-[56px] flex items-center">
                 <a href="{% url 'team_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center dark:text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
                             {% include 'icons/ball.html' %}
                         </div>
-                        <span class='dark:text-[#A1A1AA]'>
+                        <span class='text-[#A1A1AA]'>
                             Equipes
                         </span>
                     </div>
@@ -41,10 +41,10 @@
             <li class="h-[56px] flex items-center">
                 <a href="{% url 'player_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center dark:text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
                             {% include 'icons/player.html' %}
                         </div>
-                        <span class='dark:text-[#A1A1AA]'>
+                        <span class='text-[#A1A1AA]'>
                             Jogadores
                         </span>
                     </div>
@@ -53,10 +53,10 @@
             <li class="h-[56px] flex items-center">
                 <a href="{% url 'country_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center dark:text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
                             {% include 'icons/flag.html' %}
                         </div>
-                        <span class='dark:text-[#A1A1AA]'>
+                        <span class='text-[#A1A1AA]'>
                             Países
                         </span>
                     </div>
@@ -65,10 +65,10 @@
             <li class="h-[56px] flex items-center">
                 <a href="{% url 'stadium_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center dark:text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
                             {% include 'icons/stadium.html' %}
                         </div>
-                        <span class='dark:text-[#A1A1AA]'>
+                        <span class='text-[#A1A1AA]'>
                             Estádios
                         </span>
                     </div>
@@ -77,10 +77,10 @@
             <li class="h-[56px] flex items-center">
                 <a href="{% url 'trophy_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center dark:text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
                             {% include 'icons/trophy.html' %}
                         </div>
-                        <span class='dark:text-[#A1A1AA]'>
+                        <span class='text-[#A1A1AA]'>
                             Taças
                         </span>
                     </div>
@@ -89,10 +89,10 @@
             <li class="h-[56px] flex items-center">
                 <a href="{% url 'team_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center dark:text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
                             {% include 'icons/transfers.html' %}
                         </div>
-                        <span class='dark:text-[#A1A1AA]'>
+                        <span class='text-[#A1A1AA]'>
                             Transferências
                         </span>
                     </div>
