--- a/templates/atomic/organisms/edit_page.html
+++ b/templates/atomic/organisms/edit_page.html
@@ -1,14 +1,14 @@
 {% if user.is_authenticated and user.is_staff %}
     {% if country and not league and not team%}
         <a href="/admin/countries/country/{{country.pk}}/change/" title="Editar país" target="_BLANK" class="edit_component fixed rounded-md right-2 z-20 bottom-2 h-10 w-10 grid place-items-center text-2xl
-        dark:before:rounded-xl 
-        dark:shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
-        dark:before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
-        dark:before:pointer-events-none
-        dark:before:-inset-px
-        dark:before:absolute
-        dark:text-zinc-900
-        dark:bg-white
+        before:rounded-xl 
+        shadow-[0px_0px_0px_1px_rgba(255,255,255,0.1)]
+        before:shadow-[0px_2px_8px_0px_rgba(0,_0,_0,_0.20),_0px_1px_0px_0px_rgba(255,_255,_255,_0.06)_inset]
+        before:pointer-events-none
+        before:-inset-px
+        before:absolute
+        text-zinc-900
+        bg-white
         ">
             {% include 'icons/pencil.html' %}
         </a>
