--- a/templates/atomic/organisms/pagination.html
+++ b/templates/atomic/organisms/pagination.html
@@ -2,7 +2,7 @@
 
 
 <div class="pagination mt-4 sm:px-6 lg:px-8">
-  <span class="text-sm text-gray-700 dark:text-white flex gap-1 pb-5 items-center step-links">
+  <span class="text-sm text-gray-700 text-white flex gap-1 pb-5 items-center step-links">
     {% if related_items.has_previous %}
       <a href="{{ url|set_pagination_params }}page=1" class="pagination_a
       ">
