--- a/countries/templates/countries/country_detail.html
+++ b/countries/templates/countries/country_detail.html
@@ -150,7 +150,7 @@
 <div class="sm:mx-0.5">
   <div class="w-full py-2 inline-block min-w-ful sm:px-6 lg:px-8">
 
-    <div class="table_tabs flex justify-evenly gap-1 relative z-20 bottom-[-1px] w-[250px] rounded-t-md text-xs text-[#A1A1AA] cursor-pointer pl-2 pr-3 py-1  bg-white bg-zinc-900">
+    <div class="table_tabs flex justify-evenly gap-1 relative z-20 bottom-[-1px] w-[250px] rounded-t-md text-xs text-[#A1A1AA] cursor-pointer pl-2 pr-3 py-1  bg-zinc-900">
       <div table="leagues" class="leagues_tab tab w-1/3 text-center {% if request.GET.tab == 'leagues' or not request.GET.tab %} font-bold {% endif %}">LIGAS</div>
       <span class="inline-block mx-2">|</span>
       <div table="teams" class="teams_tab tab w-1/3 text-center {% if request.GET.tab == 'teams' %} font-bold {% endif %}">EQUIPES</div>
