--- a/teams/templates/teams/team_detail.html
+++ b/teams/templates/teams/team_detail.html
@@ -64,7 +64,7 @@
 <div class="sm:mx-0.5">
   <div class="max-w-[97vw] py-2 inline-block min-w-full sm:px-6 lg:px-8">
 
-    <div class="table_tabs flex justify-evenly gap-1 relative z-20 bottom-[-1px] w-[250px] rounded-t-md text-xs text-[#A1A1AA] cursor-pointer pl-2 pr-3 py-1  bg-white bg-zinc-900">
+    <div class="table_tabs flex justify-evenly gap-1 relative z-20 bottom-[-1px] w-[250px] rounded-t-md text-xs text-[#A1A1AA] cursor-pointer pl-2 pr-3 py-1  bg-zinc-900">
       <div table="players" class="players_tab tab text-center {% if request.GET.tab == 'players' or not request.GET.tab %} font-bold {% endif %}">JOGADORES</div>
       <span class="inline-block mx-2">|</span>
       <div table="trophies" class="trophies_tab tab text-center {% if request.GET.tab == 'trophies' %} font-bold {% endif %}">TROFÉUS</div>
