--- a/templates/atomic/organisms/aside.html
+++ b/templates/atomic/organisms/aside.html
@@ -5,7 +5,7 @@
             <li class="h-[56px] flex items-center">
                 <a href="/">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-[30px] ">
                             {% include 'icons/home.html' %}
                         </div>
                         <span class='text-[#A1A1AA]'>
@@ -17,7 +17,7 @@
             <li class="h-[56px] flex items-center">
                 <a href="{% url 'league_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-[30px] ">
                             {% include 'icons/league.html' %}
                         </div>
                         <span class='text-[#A1A1AA]'>
@@ -29,7 +29,7 @@
             <li class="h-[56px] flex items-center">
                 <a href="{% url 'team_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-[30px] ">
                             {% include 'icons/ball.html' %}
                         </div>
                         <span class='text-[#A1A1AA]'>
@@ -41,7 +41,7 @@
             <li class="h-[56px] flex items-center">
                 <a href="{% url 'player_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-[30px] ">
                             {% include 'icons/player.html' %}
                         </div>
                         <span class='text-[#A1A1AA]'>
@@ -53,7 +53,7 @@
             <li class="h-[56px] flex items-center">
                 <a href="{% url 'country_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-[30px] ">
                             {% include 'icons/flag.html' %}
                         </div>
                         <span class='text-[#A1A1AA]'>
@@ -65,7 +65,7 @@
             <li class="h-[56px] flex items-center">
                 <a href="{% url 'stadium_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-[30px] ">
                             {% include 'icons/stadium.html' %}
                         </div>
                         <span class='text-[#A1A1AA]'>
@@ -77,7 +77,7 @@
             <li class="h-[56px] flex items-center">
                 <a href="{% url 'trophy_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-[30px] ">
                             {% include 'icons/trophy.html' %}
                         </div>
                         <span class='text-[#A1A1AA]'>
@@ -89,7 +89,7 @@
             <li class="h-[56px] flex items-center">
                 <a href="{% url 'team_list' %}">
                     <div role="status" class="max-w-sm flex items-center justify-center gap-3">
-                        <div class="min-w-[50px] flex justify-center text-white text-slate-900 text-[30px] ">
+                        <div class="min-w-[50px] flex justify-center text-white text-[30px] ">
                             {% include 'icons/transfers.html' %}
                         </div>
                         <span class='text-[#A1A1AA]'>
