--- a/players/templates/players/player_detail.html
+++ b/players/templates/players/player_detail.html
@@ -12,7 +12,7 @@
 
 <!-- Main content section -->
 <div class="flex justify-center">
-  <div class="card">
+  <div class="card text-center">
   <img width="80" src="{{ player.img }}" class="m-auto block player_main_img" />
   <h2 class="h2_title">{{ player.name | upper }}</h2>
   </div>
