--- a/teams/templates/teams/team_detail.html
+++ b/teams/templates/teams/team_detail.html
@@ -287,7 +287,8 @@
         }
 
         item.querySelectorAll("a").forEach(a => {
-          href = a.href.split("&page=")
+          href = a.href.includes("&page=") ? a.href.split("&page=") : a.href.split("?page=")
+
           if(href.length){
             tab = a.closest("[tab]").getAttribute("tab")
             a.setAttribute("href", "?tab=" + tab + "&page=" + href[1])
